mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_call_undefined_method.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Field 'foo' not found on type 'C'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_call_undefined_method.mux:6:1
   |
 6 | c.foo()
   | ^
   |
= help: Available fields: x
